--- a/index.html
+++ b/index.html
@@ -15,11 +15,33 @@
     />
     <style>
       /* ここにCSSを書きます */
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+      }
     </style>
   </head>
 
   <body>
     <!-- ここにhtmlとjavascript書いていきます -->
     <div id="map"></div>
+    <script>
+      // mapbox の accessToken を設定
+      mapboxgl.accessToken =
+        "pk.eyJ1IjoiMjAyNTA1MDM3NCIsImEiOiJjbGo1OGpyejkwYXJlM2x0ZWJtN3M0a3dkIn0.HZHCKdeNL9c6VXeCb2Ke2w";
+      // 紀尾井町周辺の地図を表示させる
+      var map = new mapboxgl.Map({
+        container: "map",
+        style: "mapbox://styles/mapbox/outdoors-v11",
+        center: [139.736897, 35.679584],
+        zoom: 15,
+      });
+    </script>
   </body>
 </html>
